--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header>
         <div class="container">
             <div class="image">
-                <img src="../../images/logo.svg" alt="">
+                <img src="logo.svg" alt="">
             </div>
             <div class="info">
                 <h1>A history of everything you copy</h1>
@@ -40,7 +40,7 @@
     <div class="second-section">
         <div class="left-side">
             <div class="image">
-                <img src="../../images/image-computer.png" alt="">
+                <img src="image-computer.png" alt="">
             </div>
         </div>
         <div class="right-side">
@@ -64,7 +64,7 @@
             <p>Whether you’re on the go, or at your computer, you can access all your Clipboard snippets in a few simple clicks.</p>
         </div>
         <div class="image">
-            <img src="../../images/image-devices.png" alt="">
+            <img src="image-devices.png" alt="">
         </div>
     </div>
     <div class="container">
@@ -76,7 +76,7 @@
     <div class="third-section">
         <div class="first-side">
             <div class="image">
-                <img src="../../images/icon-blacklist.svg" alt="">
+                <img src="icon-blacklist.svg" alt="">
             </div>
             <div class="info">
                 <h2>Create blacklists</h2>
@@ -85,7 +85,7 @@
         </div>
         <div class="second-side">
             <div class="image">
-                <img src="../../images/icon-text.svg" alt="">
+                <img src="icon-text.svg" alt="">
             </div>
             <div class="info">
                 <h2>Plain text snippets</h2>
@@ -94,7 +94,7 @@
         </div>
         <div class="third-side">
             <div class="image">
-                <img src="../../images/icon-preview.svg" alt="">
+                <img src="icon-preview.svg" alt="">
             </div>
             <div class="info">
                 <h2>Sneak preview</h2>
@@ -104,19 +104,19 @@
     </div>
     <div class="social-connects">
         <div class="image">
-            <img src="../../images/logo-google.png" alt="">
+            <img src="logo-google.png" alt="">
         </div>
         <div class="image">
-            <img src="../../images/logo-ibm.png" alt="">
+            <img src="logo-ibm.png" alt="">
         </div>
         <div class="image">
-            <img src="../../images/logo-microsoft.png" alt="">
+            <img src="logo-microsoft.png" alt="">
         </div>
         <div class="image">
-            <img src="../../images/logo-hp.png" alt="">
+            <img src="logo-hp.png" alt="">
         </div>
         <div class="image">
-            <img src="../../images/logo-vector-graphics.png" alt="">
+            <img src="logo-vector-graphics.png" alt="">
         </div>
     </div>
     <div class="last-section">
@@ -134,7 +134,7 @@
     <footer>
         <div class="container">
             <div class="image">
-                <img src="../../images/logo.svg" alt="">
+                <img src="logo.svg" alt="">
             </div>
             <div class="foot">
                 <p>FAQs</p>
